--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -2,14 +2,10 @@
 <hr />
 <div class="row">
   <div class="col s12 m6">
-    <ul>
+    <button class="btn" id="toggle">Show Form</button>
+    <ul id="games-list">
       <% @games.each do |game| %>
-        <li
-          class="game-item"
-          data-id=<%= game.id %>
-        >
-          <%= game.name %> - <%= game.description %>
-        </li>
+        <%= render partial: 'game', locals: { game: game } %>
       <% end %>
     </ul>
   </div>
